--- a/style.css
+++ b/style.css
@@ -500,3 +500,373 @@ footer h1 {
 #now {
     font-weight: bold;
 }
+
+
+
+/* students_2 페이지 */
+
+
+.introduce {
+    width: 70%;
+    height: 520px;
+    margin: auto;
+    margin-top: 72px;
+    display: flex;
+}
+
+#students_detail {
+    width: 40%;
+    height: 100%;
+    border: 1px solid #333;
+    margin-right: 20px;
+}
+
+#students_img {
+    width: 180px;
+    height: 180px;
+    background-color: #C4C4C4;
+    margin: auto;
+    margin-top:5%;
+    border-radius: 200px;
+}
+
+.introduce p {
+    font-size: 12px;
+    text-align: center;
+    margin-bottom: 10px;
+    width: 100%;
+}
+
+.introduce h2 {
+    font-size: 22px;
+    text-align: center;
+    margin: 10px auto;
+}
+
+.introduce ul {
+    display: flex;
+    width: 70%;
+    margin: auto;
+    margin-bottom: 15px;
+    justify-content: space-between;
+    
+}
+
+.introduce li {
+    padding: 2px 20px;
+    background-color: #c4c4c4;
+    border-radius: 20px;
+    white-space: nowrap;
+}
+
+.introduce ul a {
+    text-decoration: none;
+    color: #333;
+    font-size: 14px;
+}
+
+#det {
+    width: 70%;
+    margin: auto;
+    text-align: left;
+    font-size: 14px;
+    margin-top: 10px;
+    font-weight: bold;
+    white-space: nowrap;
+}
+
+#email, #tel {
+    font-weight: normal;
+    margin-left: 10px;
+}
+
+#one_spk {
+    text-align: left;
+    width: 70%;
+    margin: auto;
+    font-size: 14px;
+    margin-top: 30px;
+    line-height:1px;
+    white-space: nowrap;
+}
+
+.bold {
+    
+    font-weight: bold;
+}
+
+#suggestion {
+    width: 70%;
+    height: 45px;
+    margin-left: 15%;
+    text-align: center;
+    margin-top: 25px;
+    background-color: #727272;
+    border: none;
+    color: #fff;
+}
+
+
+
+
+
+#students_about {
+    width: 60%;
+    height: 100%;
+    border: 1px solid #333;
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+#students_about h2, #students_about p {
+    text-align: left;
+}
+
+#stu_side {
+    width: 90%;
+    margin: auto;
+
+
+}
+
+.stu_side {
+    width: 40%;
+    margin: auto;
+}
+
+.portfolio {
+    width: 70%;
+    margin:auto;
+    margin-top: 100px;
+}
+
+.portBox {
+    margin-top: 24px;
+    width: 100%;
+    height: 324px;
+    border: 1px solid #333;
+    display: flex;
+    font-size: 18px;
+    font-weight: lighter;
+    color: #333;
+}
+
+.right_side {
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+}
+
+
+#portImg {
+    width: 50%;
+    height: 100%;
+    background-color: #727272;
+}
+
+#portName {
+    width: 80%;
+    height: 20%;
+    margin: auto;
+}
+
+#portIntro {
+    width: 80%;
+    height: 50%;
+    margin: auto;
+}
+
+#portDet {
+    width: 80%;
+    height: 10%;
+    margin: auto;
+    position: relative;
+}
+
+#more_portfolio {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    border: none;
+    right: 0;
+    background-color: #727272;
+    color: #fff;
+}
+
+#emp {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+
+/* Works_2 페이지 */
+
+#comment {
+    display: flex;
+    justify-content:space-between;
+    width: 70%;
+    margin: auto;
+    margin-top: 70px;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+#work_name {
+    font-size: 14px;
+    font-weight: normal;
+}
+
+#comment_btn {
+    width: 136px;
+    border:none;
+    background-color: #333;
+    color: #fff;
+}
+
+#comment_exp {
+    width: 70%;
+    margin: auto;
+    margin-top: 18px;
+    margin-bottom: 24px;
+    font-size: 16px;
+}
+
+#work_img {
+    width: 70%;
+    margin: auto;
+    height: 400px;
+    border: 1px solid #333;
+    margin-bottom: 48px;
+
+}
+
+.prof_speak {
+    width: 100%;
+    height: 252px;
+    background-color: #F0F0F0;
+}
+
+.prof_speak p {
+    width: 70%;
+    margin: auto;
+    font-size: 18px;
+}
+
+#prof {
+    font-size: 16px;
+    padding-top: 60px;
+    margin-bottom: 20px;
+}
+
+#prof_name {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+#work_det {
+    font-size: 24px;
+    font-weight: bold;
+    width: 70%;
+    text-align: center;
+    margin: auto;
+    margin-top: 72px;
+    margin-bottom: 48px;
+}
+
+.detail_work {
+    display: flex;
+    width: 50%;
+    height: 248px;
+    margin: auto;
+    justify-content: space-around
+}
+
+#deta {
+    width: 30%;
+    height: 100%;
+    border: 1px solid #333;
+}
+
+#det_intro {
+    margin: auto;
+    margin-top: 32px;
+    margin-bottom: 48px;
+    width: 60%;
+    text-align: center;
+}
+
+.middle_work {
+    width: 70%;
+    height: 272px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 36px;
+}
+
+#mwImg {
+    width: 49%;
+    height: 100%;
+    border: 1px solid #333;
+}
+
+#mwIntro {
+    width: 49%;
+    height: 100%;
+}
+
+#left {
+    text-align: left;
+}
+
+#right {
+    text-align: right;
+}
+
+#pariticipation {
+    font-size: 24px;
+    font-weight: bold;
+    width: 70%;
+    text-align: center;
+    margin: auto;
+    margin-top: 88px;
+    margin-bottom: 8px;
+}
+
+.bottom_part {
+    width: 70%;
+    height: 716px;
+    margin: auto;
+    
+    border: 1px solid #333;
+}
+
+.btm_flex {
+    width: 90%;
+    margin: auto;
+    margin-top: 46px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#part_img {
+    width: 48%;
+    height: 252px;
+    background-color: #EBEBEB;
+    margin: auto;
+}
+
+#part_name {
+    width: 90%;
+    margin:auto;
+    text-align: left;
+    margin-top: 52px;
+    font-size: 16px;
+}
+
+#pname {
+    font-weight: bold;
+    font-size: 20px;
+}
+
