--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ ul {
 .sub_header {
     width: 100vw;
     height: 48px;
-    background-color: #C4C4C4;
     
 }
 
@@ -78,11 +77,11 @@ ul {
 
 .sub_li a {
     text-decoration: none;
-    color: rgb(233, 233, 233);
+    color: #333;
 }
 
 #emphasis {
-    color: #fff;
+    color: #333;
     font-weight: bold;
 }
 
@@ -208,15 +207,14 @@ main h3 {
 
 footer {
     width: 100vw;
-    height: 230px; 
-    background-color: #797979;
+    height: 100px; 
     margin-top: 140px;
 }
 
 footer h1 {
     text-align: center;
     line-height: 230px;
-    color: #fff;
+    color: rgb(139, 139, 139);
 }
 
 
@@ -225,13 +223,63 @@ footer h1 {
 
 /* 메인 콘텐츠 */
 
-#stu_title {
-    margin-top: 72px;
-    text-align: center;
+.stu_tag {
+    width: 100%;
+    height: 336px;
+    background-image: url(./img/stu_Polygon\ 1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: relative;
 }
 
+input:focus {outline:none;}
+
+#stu_search {
+    position: absolute;
+    top: 103px;
+    left: 15%;
+    width: 411px;
+    padding-left: 40px;
+    height: 44px;
+    border: 2px solid #fff;
+    border-radius: 20px; 
+}
+
+#stu_search::placeholder {
+    color: #fff;
+    opacity: 0.8;
+}
+
+#stu_icon {
+    position: absolute;
+    font-size: 20px;
+    top: 115px;
+    color: #fff;
+    left: calc( 15% + 432px );
+}
+
+.stu_tag ul {
+    display: flex;
+    gap: 20px;
+    position: absolute;
+    top: 180px;
+    left: 15%;
+}
+
+.stu_tag ul li a {
+    
+    color: #333;
+    text-decoration: none;
+    background-color: #B1E7FC;
+    padding: 4px 16px;
+    border-radius: 13px;
+    font-size: 14px;
+}
+
+
 .stu_main {
-    width: 920px;
+    width: 948px;
     display: flex;
     margin: auto;
     margin-top: 36px;
@@ -240,25 +288,26 @@ footer h1 {
 }
 
 .students {
-    width: 216px;
-    height:260px;
+    width: 292px;
+    height:383px;
     border: 1px solid #333;
     position: relative;
     margin-bottom: -50px;
 }
 
-.students:nth-child(2n) {
-    margin-top: 60px;
+.students:nth-child(3n + 2) {
+    margin: 60px 18px 0 18px;
 }
+
 
 #explain {
     position: absolute;
-    margin: 29px;
-    bottom: 20px;
-    width: 156px;
-    height: 156px;
+    left: 38px;
+    bottom: 68px;
+    width: 212px;
+    height: 212px;
     background-color: #525252;
-    border-radius: 100px;
+    border-radius: 300px;
     color: #fff;
     text-align: center;
     line-height: 15px;
@@ -267,14 +316,61 @@ footer h1 {
 }
 
 #explain h4 {
+    margin-top: 20px;
     font-size: 18px;
     line-height: 90px;
+}
+
+#explain h4 a{
+    color: #fff;
+    text-decoration: none;
 }
 
 .students:hover #explain {
     opacity: 1;
     transition: all 0.5s;
 }
+
+#stu_union {
+    background-image: url(./img/stu_Union.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center left;
+    width: 360px;
+    height: 360px;
+    position: absolute;
+    top: 846px;
+    left: -201px;
+    z-index: -999;
+}
+
+#stu_union2 {
+    background-image: url(./img/stu_Union2.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center left;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    top: 3000px;
+    right: 200px;
+    z-index: -999;
+}
+
+
+#stu_rec {
+    background-image: url(./img/stu_Rectangle\ 150.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center left;
+    width: 360px;
+    height: 360px;
+    position: absolute;
+    top: 1698px;
+    right: -101px;
+    z-index: -999;
+}
+
 
 
 
