--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
     -ms-overflow-style: none;
-            scrollbar-width: none;
+    scrollbar-width: none;
+    color: #333;
 }
 
 ::-webkit-scrollbar { display: none; }
@@ -608,8 +609,230 @@ input:focus {outline:none;}
 
 /* students_2 페이지 */
 
+.stu2_name {
+    background-image: url(./img/stu_2_Polygon\ 1.png);
+    background-size: cover;
+    width: 100%;
+    height: 603px;
+    position: relative;
+    margin-bottom: 90px;
+}
 
-.introduce {
+.stu2_name h1 {
+    position: absolute;
+    color: #fff;
+    top: 128px;
+    left: 400px;
+    font-size: 30px;
+
+}
+
+.stu2_name ul {
+    display: flex;
+    gap: 20px;
+    position: absolute;
+    top: 240px;
+    left: 400px;
+}
+
+.stu2_name ul a{
+    color: #333;
+    font-weight: bold;
+    text-decoration: none;
+    background-color: #B1E7FC;
+    padding: 4px 24px;
+    border-radius: 20px;
+}
+
+#stu2_img {
+    width: 480px;
+    height: 480px;
+    background-color: #EEEEEE;
+    border-radius: 1000px;
+    position: absolute;
+    right: 15%;
+    top: 20px
+}
+
+.stu2_about {
+    width: 70%;
+    margin: auto;
+}
+
+#stu2_pro {
+    background-image: url(./img/stu2_Vector\ 21.png);
+    background-size: cover;
+    width: 490px;
+    height: 400px;
+    position: absolute;
+    top: 821px;
+    
+   
+
+    /* 나중에 지울 거 */
+    line-height: 490px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.stu2_me {
+    width: 40%;
+    margin-left: 200px;
+    position: absolute;
+    top: 821px;
+    right: 0;
+    
+}
+
+.stu2_me h3 {
+    color: #333;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    text-align: left;
+}
+
+#stu2_line {
+    background-image: url(./img/stu2_line.png);
+    background-size: cover;
+    width: 169px;
+    height: 15px;
+    margin-left: -25px;
+    margin-bottom: 40px;
+}
+
+.stu2_about p{
+    font-size: 16px;
+    width: 446px;
+}
+
+.what_i {
+    width: 30%;
+    margin: auto;
+    margin-top: 639px;
+    
+    
+}
+
+.what_i h3 {
+    color: #333;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+#stu2_wline {
+    background-image: url(./img/stu2_line2.png);
+    background-size: cover;
+    width: 211px;
+    height: 15px;
+    margin:auto;
+}
+
+.what_i ul {
+    display: flex;
+    margin-top: 50px;
+    justify-content: space-between;
+}
+
+#stu2_do {
+    width: 96px;
+    height: 96px;
+    background-color: #A9C3FF;
+    border-radius: 200px;
+}
+
+.what_i ul li p {
+    text-align: left;
+    margin-top: 20px;
+    margin-left: 10px;
+    font-weight: 700;
+}
+
+.stu2_works {
+    margin:auto;
+    margin-top : 124px;
+    width: 60%;
+    
+}
+
+.stu2_works h3 {
+    color: #333;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.stu2_grid {
+    margin-top: 67px;
+    width: 100%;
+    height: 566px;
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    gap: 18px;
+}
+
+.stu2_work {
+    border: 1px solid #333;
+}
+
+.stu2_work:nth-child(1) {
+    grid-row-start: 1;
+    grid-row-end: 4;
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+
+
+.stu2_work:nth-child(2) {
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-column-start: 4;
+    grid-column-end: 8;
+}
+
+.stu2_work:nth-child(3) {
+    grid-row-start: 1;
+    grid-row-end: 4;
+    grid-column-start: 8;
+    grid-column-end: 10;
+}
+
+.stu2_work:nth-child(4) {
+    grid-row-start: 4;
+    grid-row-end: 6;
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+
+.stu2_work:nth-child(5) {
+    grid-row-start: 3;
+    grid-row-end: 6;
+    grid-column-start: 4;
+    grid-column-end: 7;
+}
+
+.stu2_work:nth-child(6) {
+    grid-row-start: 4;
+    grid-row-end: 6;
+    grid-column-start: 7;
+    grid-column-end: 10;
+}
+
+.stu2_contact h3 {
+    color: #333;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    margin-top: 116px;
+}
+
+
+
+
+/* .introduce {
     width: 70%;
     height: 520px;
     margin: auto;
@@ -707,7 +930,7 @@ input:focus {outline:none;}
     background-color: #727272;
     border: none;
     color: #fff;
-}
+} */
 
 
 
