--- a/style.css
+++ b/style.css
@@ -380,7 +380,99 @@ input:focus {outline:none;}
 
 /* 메인 */
 
-.search_container {
+.work_main {
+    display: flex;
+    width: 70%;
+    margin: auto;
+    margin-top: 140px;
+    justify-content: space-between;
+}
+
+#work_mom {
+    width: 409px;
+    height: 443px;
+    background-color: #EBEBEB;
+}
+
+#work_mname {
+    display: flex;
+    gap: 20px;
+    width: 70%;
+    margin: auto;
+    font-size: 24px;
+    margin-top: 24px;
+    font-weight: 500;
+}
+
+#work_hash {
+    font-size: 14px;
+    line-height: 24px;
+    align-items: center;
+    background-color: #C4C4C4;
+    border-radius: 20px;
+    margin-top: auto;
+    padding: 0px 10px;
+}
+
+#work_3d {
+    width: 74%;
+    height: 440px;
+    background-color: #EBEBEB;
+    margin: auto;
+    margin-top: 80px;
+}
+
+#right_work {
+    margin-left: 16%;
+    
+}
+
+#work_bottom {
+    display: flex;
+    width: 10%;
+    margin: auto;
+    margin-top: 200px;
+    justify-content: space-between;
+    
+    
+}
+
+#work_bottom a{
+    text-decoration: none;
+    text-align: center;
+    margin: auto;
+
+}
+
+#work_deco {
+    position: absolute;
+    background-image: url(./img/work_Rectangle\ 159.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width : 360px;
+    height: 360px;
+    top: 1400px;
+    left: -120px;
+}
+
+@media (min-width: 1920px) {
+    .work_main {
+        width: 50%;
+    }
+
+    #work_mname {
+        width:50%;
+    }
+
+    #right_work {
+        margin-left: 25%;
+    }
+}
+
+
+
+
+/* .search_container {
     width: 920px;
     height: 240px;
     border: 1px solid #333;
@@ -483,7 +575,7 @@ input:focus {outline:none;}
 
 .works:nth-child(2n) {
     margin-top: 60px;
-}
+} */
 
 
 
