--- a/style.css
+++ b/style.css
@@ -93,7 +93,254 @@ ul {
 
 /* 메인 콘텐츠 */
 
-.main_img {
+
+#ab_big {
+    width: 610px;
+    height: 428px;
+    background: rgba(196, 196, 196, 0.3);
+    border-radius: 10px;
+    position: absolute;
+    top: 224px;
+    left: 10%;
+}
+
+#ab_kpu {
+    width: 440px;
+    height: 254px;
+    background: #C4C4C4;
+    border-radius: 10px;
+    position: absolute;
+    top: 275px;
+    right: 10%;
+}
+
+#ab_small {
+    width: 212px;
+    height: 124px;
+    background: #C4C4C4;
+    position: absolute;
+    top: 590px;
+    right: 30%;
+}
+
+#ab_small2 {
+    width: 212px;
+    height: 124px;
+    background: #C4C4C4;
+    position: absolute;
+    top: 590px;
+    right: 10%;
+    
+}
+
+#ab_back {
+    font-size: 194px;
+    font-weight: 500;
+    color: rgba(59, 114, 238, 0.15);
+    position: absolute;
+    top: 767px;
+}
+
+.ab_exp {
+    width: 80%;
+    left: 10%;
+    text-align: center;
+    position: absolute;
+    top: 858px;
+    width: 902px;
+
+}
+
+#ab_name {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 20px;
+    
+    
+}
+
+.ab_pur {
+    width: 80%;
+    position: absolute;
+    display: flex;
+    top: 1128px;
+    left: 10%;
+    gap: 30px;
+
+}
+
+.ab_pur div {
+    width: 446px;
+    height: 334px;
+    
+}
+
+#ab_left {
+    background-color: #EBEBEB;
+    border-radius: 10px;
+    filter: drop-shadow(0px 6px 15px rgba(0, 0, 0, 0.25))
+}
+
+.ab_pur h2 {
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 50px;
+}
+
+.ab_pur p {
+    font-size: 15px;
+    line-height: 28px;
+    
+}
+
+
+.ab_pur2 {
+    width: 80%;
+    position: absolute;
+    display: flex;
+    top: 1571px;
+    left: 10%;
+    gap: 30px;
+
+}
+
+
+#ab_right1 {
+    width: 212px;
+    height: 223px;
+    background-color: #3B72EE;
+    filter: drop-shadow(0px 6px 15px rgba(0, 0, 0, 0.25));
+    position: absolute;
+    border-radius: 10px;
+    top: 140px;
+    right: 192px;
+}
+
+#ab_right2 {
+    width: 155px;
+    height: 346px;
+    background-color: #3B72EE;
+    filter: drop-shadow(0px 6px 15px rgba(0, 0, 0, 0.25));
+    position: absolute;
+    border-radius: 10px;
+    top: 17px;
+    right: 17px;
+}
+
+#ab_right3 {
+    width: 155px;
+    height: 346px;
+    background-color: #3B72EE;
+    filter: drop-shadow(0px 6px 15px rgba(0, 0, 0, 0.25));
+    background-color: rgba(59, 114, 238, 0.44);
+    position: absolute;
+    border-radius: 10px;
+    top: 0px;
+    right: 0;
+}
+
+#pur {
+    margin-top: 102px;
+}
+
+#pur h2 {
+    margin-bottom: 20px;
+}
+
+#pur p {
+    width: 446px;
+    height: 334px;
+    line-height: 28px;
+    
+}
+
+#ab_cur {
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+    position: absolute;
+    top: 2120px;
+    right: 0;
+    left: 0;
+}
+
+#cur_box {
+    width: 80%;
+    height: 320px;
+    background-color: #EBEBEB;
+    filter: drop-shadow(0px 6px 15px rgba(0, 0, 0, 0.25));
+    border-radius: 10px;
+    position: absolute;
+    top: 2175px;
+    left: 10%;
+}
+
+#ab_footer {
+    position: absolute;
+    height: 300px;
+    top: 2400px;
+}
+
+@media (min-width: 1440px) {
+    #ab_big {
+        
+        left: 20%;
+    }
+
+    #ab_small {
+        
+        right: 36%;
+    }
+
+    #ab_small2 {
+        
+        right: 20%;
+    }
+
+    #ab_kpu {
+        right: 20%;
+    }
+    
+}
+
+@media (min-width: 1920px) {
+    #ab_big {
+        
+        left: 20%;
+    }
+
+    #ab_small {
+        
+        right: 42%;
+    }
+
+    #ab_small2 {
+        
+        right: 30%;
+    }
+
+    #ab_kpu {
+        right: 30%;
+    }
+
+    .ab_pur {
+        left: 25%;
+    
+    }
+
+    .ab_exp {
+        left: 15%;
+        width: 1200px;
+    }
+    
+    
+}
+
+
+
+
+/* .main_img {
     position: relative;
     width: 100vw;
     height: 180px;
@@ -202,7 +449,7 @@ main h3 {
 #pic {
     width: 256px;
     border: 1px solid #333;
-}
+} */
 
 /* 푸터 */
 
