--- a/style.css
+++ b/style.css
@@ -1746,5 +1746,55 @@ input:focus {outline:none;}
     font-weight: 400;
 }
 
+.mdePicture{
+    width: 100%;
+    height: 330px;
+
+    margin-top: 330px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.mdePicture h1{
+    font-size: 25px;
+    font-weight: 700;
+    color: #3B72EE;
+}
+
+.picCon{
+    width: 1020px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    margin-top: 44px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.picCon div{
+    width: 220px;
+    height: 256px;
+    border: none;
+    border-radius: 20px;
+    background-color: #E0E0E0;
+    box-shadow: 2px 4px 15px #c2c2c2;
+}
+
+footer{
+    width: 100%;
+    height: 170px;
+    text-align: center;
+}
+
+footer > h3{
+    color: #5F5F5F;
+    font-size: 26px;
+    font-weight: 400;
+    padding-top: 72px;
+}
+
+
 
 
