--- a/style.css
+++ b/style.css
@@ -95,24 +95,36 @@ ul {
 
 
 #ab_big {
-    width: 610px;
-    height: 428px;
-    background: rgba(196, 196, 196, 0.3);
-    border-radius: 10px;
+    width: 652px;
+    height: 410px;
     position: absolute;
     top: 224px;
-    left: 10%;
+    left: 25%;
+    background-image: url(./img/about/스크린샷\ 2021-12-14\ 오전\ 2.07\ 1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 #ab_kpu {
     width: 440px;
     height: 254px;
-    background: #C4C4C4;
+    background-color: #3B72EE;
     border-radius: 10px;
     position: absolute;
     top: 275px;
-    right: 10%;
+    right: 25%;
 }
+
+#ab_kpu p{
+    font-size: 45px;
+    font-weight: 500;
+    color: #fff;
+    text-align: center;
+    margin-top: 30px;
+    line-height: 65px;
+}
+
+
 
 #ab_small {
     width: 212px;
@@ -120,8 +132,11 @@ ul {
     background: #C4C4C4;
     position: absolute;
     top: 590px;
-    right: 30%;
+    right: 37%;
+    background-color: #3B72EE;
 }
+
+
 
 #ab_small2 {
     width: 212px;
@@ -129,8 +144,19 @@ ul {
     background: #C4C4C4;
     position: absolute;
     top: 590px;
-    right: 10%;
+    right: 25%;
+    background-color: #3B72EE;
     
+}
+
+#ab_small p, #ab_small2 p {
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+    color: #fff;
+    margin-top: 22px;
+    line-height: 28px;
+
 }
 
 #ab_back {
@@ -139,15 +165,28 @@ ul {
     color: rgba(59, 114, 238, 0.15);
     position: absolute;
     top: 767px;
+    
+}
+
+#design_back {
+    font-size: 194px;
+    font-weight: 500;
+    color: rgba(59, 114, 238, 0.15);
+    position: absolute;
+    top: 1700px;
+    right: -15%;
+    transform: rotate(-90deg);
+    z-index: 999;
 }
 
 .ab_exp {
-    width: 80%;
-    left: 10%;
+    width: 70%;
     text-align: center;
     position: absolute;
     top: 858px;
-    width: 902px;
+    transform: translate(-50%, -20%);
+    left: 50%;
+    right: 50%;
 
 }
 
@@ -160,33 +199,35 @@ ul {
 }
 
 .ab_pur {
-    width: 80%;
+    width: 100%;
+    height: 312px;
     position: absolute;
-    display: flex;
+    background-color: #f6f6f6;
     top: 1128px;
-    left: 10%;
-    gap: 30px;
+    left: 0;
 
 }
 
 .ab_pur div {
-    width: 446px;
-    height: 334px;
-    
-}
-
-#ab_left {
-    background-color: #EBEBEB;
-    border-radius: 10px;
-    filter: drop-shadow(0px 6px 15px rgba(0, 0, 0, 0.25))
+    width: 50%;
+    margin-left: 15%;
 }
 
 .ab_pur h2 {
     margin-bottom: 20px;
     font-size: 20px;
     font-weight: 700;
-    margin-top: 50px;
+    margin-top: 72px;
 }
+
+.ab_pur h3 {
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 28px;
+    color: #3B72EE;
+}
+
 
 .ab_pur p {
     font-size: 15px;
@@ -196,12 +237,13 @@ ul {
 
 
 .ab_pur2 {
-    width: 80%;
+    width: 50%;
     position: absolute;
     display: flex;
-    top: 1571px;
-    left: 10%;
-    gap: 30px;
+    top: 1800px;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, -50%);
 
 }
 
@@ -263,33 +305,34 @@ ul {
 }
 
 #ab_cur {
-    font-size: 20px;
-    font-weight: 700;
+    font-size: 24px;
+    font-weight: 800;
     text-align: center;
     position: absolute;
-    top: 2120px;
+    top: 2150px;
     right: 0;
     left: 0;
 }
 
 #cur_box {
-    width: 80%;
-    height: 320px;
+    width: 100%;
+    height: 801px;
     background-color: #EBEBEB;
-    filter: drop-shadow(0px 6px 15px rgba(0, 0, 0, 0.25));
+    background-image: url(./img/about/스크린샷\ 2021-12-14\ 오전\ 2.44\ 1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 10px;
     position: absolute;
-    top: 2175px;
-    left: 10%;
+    top: 2200px;
 }
 
 #ab_footer {
     position: absolute;
     height: 300px;
-    top: 2400px;
+    top: 2600px;
 }
 
-@media (min-width: 1440px) {
+/* @media (min-width: 1440px) {
     #ab_big {
         
         left: 20%;
@@ -310,9 +353,9 @@ ul {
     }
 
     
-}
+} */
 
-@media (min-width: 1920px) {
+/* @media (min-width: 1920px) {
     #ab_big {
         
         left: 25%;
@@ -348,7 +391,7 @@ ul {
     }
     
     
-}
+} */
 
 
 
