--- a/style.css
+++ b/style.css
@@ -1995,6 +1995,27 @@ footer > h3{
     font-weight: 400;
 }
 
+.tagPage_tag {
+    width: 100%;
+    height: 378px;
+    margin: auto;
+    position: relative;
+
+    background-image: url('./img/tagBack.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+.tagPage_tag p {
+    text-align: center;
+    padding-top: 160px;
+    font-size: 28px;
+    font-weight: 600;
+    color: #fff;
+}
+
 @media (min-width: 1920px) {
     
 
